# mobile

./: .gitignore  LICENSE  TODO.txt  book.md  coursePlanning.md  pyproject.toml
book/: _toc.yml
book/_build/.doctrees/: book.doctree  environment.pickle
book/_build/html/: .buildinfo  book.html  genindex.html  objects.inv  search.html  searchindex.js
book/_build/html/_sources/: book.md
docs/: course.md  deadlines.md  intro_slides_template.pptx  pictch_good.odt  pitch_bad.odt  pitch_good.odt  slides_theme.potm  ~$ctch_good.odt
mobile_book/: _config.yml
resources/pitches/: good_pitch_screen_2.psd
