[tool.poetry]
name = "Mobile Applications"
version = "0.1.0"
description = ""
authors = [
    "Daan Nijs <daan.nijs@ucll.be>",
    "Dries Decuyper <dries.decuyper@ucll.be>"
    ]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^0.15.1"
jupytercards = "^2.5.5"
jupyterquiz = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
